# dynamicalnodes

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: ADDING_REFERENCES.md  BIBLIOGRAPHY_GUIDE.md  BIBLIOGRAPHY_NEW_SYSTEM.md  BIBLIOGRAPHY_QUICK_REFERENCE.md  BIBLIOGRAPHY_WORKFLOW.md  DOCUMENTATION_RESTRUCTURE.md  SEARCHABLE_BIBLIOGRAPHY_SETUP.md  USER_CHANGES_SUMMARY.md  generate_bib_metadata.py
docs/source/: algorithm_library.rst  community_references.bib  conf.py  index.rst  installation.rst  license.rst  references.bib  using_citations_example.rst
docs/source/_static/css/: custom.css
docs/source/_static/figures/: figure_1_panel_a.tex  figure_1_panel_b.tex  figure_1_panel_c.tex  figure_1_panel_d.tex  figure_1_panel_title.tex  figure_first.ipynb
docs/source/_static/figures/_minted-figure_1_panel_b/: 2AD9CC88C9ECF4D70B4C4190741A34E960903D1D50296E5743A0CDCEF4240119.pygtex  30DCD5E97C28CE388D267A2E7AA73F2560903D1D50296E5743A0CDCEF4240119.pygtex  3D35E8F367E1F7B1EE4053E201FE0F8060903D1D50296E5743A0CDCEF4240119.pygtex  4C0083642056D8E920A7BCEB3BB3AECF60903D1D50296E5743A0CDCEF4240119.pygtex  6B850F9698BA8751A9EF70555500057560903D1D50296E5743A0CDCEF4240119.pygtex  C70C2839C779769F244AC29A91B2CDEB60903D1D50296E5743A0CDCEF4240119.pygtex  DD0296C1126AADBF98185765FB08BB3560903D1D50296E5743A0CDCEF4240119.pygtex  DFF9E7A8082880AF22C5877BE9148CA860903D1D50296E5743A0CDCEF4240119.pygtex  E2945B71360A367AF0E8946B99EF197E60903D1D50296E5743A0CDCEF4240119.pygtex  F5F90E974CD7A19794DD89462688DC9060903D1D50296E5743A0CDCEF4240119.pygtex
docs/source/api/: algorithm_library.rst  algorithm_library_controllers.rst  algorithm_library_estimators.rst  data_change.rst  dynamical_system.rst  gazebo.rst  index.rst  ros.rst  rosnode.rst  rostools.rst
docs/source/api/_autosummary/: pykal.data_change.corrupt.rst  pykal.data_change.prepare.rst
docs/source/community/: index.rst
docs/source/community/algorithm_library/: contributing_to_algorithm_library.rst
docs/source/fh_library/: index.ipynb
docs/source/fh_library/controllers/: controllers.ipynb
docs/source/fh_library/controllers/lqr/: lqr.ipynb
docs/source/fh_library/controllers/pid/: pid.ipynb
docs/source/fh_library/observers/: observers.ipynb
docs/source/fh_library/plants/: plants.ipynb
docs/source/getting_started/: index.rst  overview.rst
docs/source/getting_started/python_to_ros/: advanced_features.rst  dynamical_systems_as_ros_nodes.rst  index.rst  installation.rst  launch_files.rst  modules.rst  troubleshooting.rst
docs/source/getting_started/ros_to_gazebo/: hardware_deployment.rst  index.rst  installation.rst  modules.rst  ros_nodes_and_gazebo.rst  troubleshooting.rst
docs/source/getting_started/theory_to_python/: algorithms_as_dynamical_systems.rst  control_systems_as_dynamical_systems.rst  index.rst  installation.rst  modules.rst
docs/source/notebooks/: algorithm_library.ipynb  cruise_control.ipynb  gps_imu_state_estimation.ipynb  tutorial.ipynb
docs/source/notebooks/.ipynb_checkpoints/: pykal_workflow-checkpoint.ipynb
docs/source/notebooks/algorithm_library/: ai_ukf_crazyflie.ipynb  ai_ukf_pykal.ipynb  kf_crazyflie.ipynb  kf_pykal.ipynb  kf_turtlebot.ipynb  lqr_crazyflie.ipynb  lqr_pykal.ipynb  lqr_turtlebot.ipynb  mpc_crazyflie.ipynb  mpc_pykal.ipynb  mpc_turtlebot.ipynb  pf_crazyflie.ipynb  pf_pykal.ipynb  pf_turtlebot.ipynb  pid_crazyflie.ipynb  pid_pykal.ipynb  pid_turtlebot.ipynb  ukf_crazyflie.ipynb  ukf_pykal.ipynb  ukf_turtlebot.ipynb
docs/source/notebooks/community_library/: README.md
docs/source/notebooks/f_h_library/: f_h_functions.ipynb
docs/source/notebooks/ros_nodes/: ann_estimator_node.py  controller_node.py  cruise_control.launch.py  four_panel_cruise_control_layout.xml  four_panel_imu_gps.xml  gps_node.py  imu_node.py  kf_estimator_node.py  reference_node.py
docs/source/tutorials/: cruise_control_2.ipynb  index.rst
docs/source/tutorials/0_cruise_control/: 0_cruise_control.ipynb  kalman_node.py  plant_node.py
docs/source/tutorials/1_gps_imu/: 1_gps_imu.ipynb  gps_imu.launch.py  kf_estimator_node.py
src/: example_rclpy_node.py
src/dynamicalnodes/: __init__.py  dynamical_system.py  ros2py_py2ros.py  rosnode.py  rostools.py
(+37 files in other folders)
