[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dynamicalnodes"
version = "0.1.0"
description = "dynamicalnodes is a Python library for modeling general control systems."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Nehal Singh Mangat", email = "nehalsinghmangat.software@gmail.com" }
]
keywords = ["control", "estimation", "ros2"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-doctestplus>=1.0.0",
  "flake8>=6.0",
  "black>=24.0",
  "isort>=6.0",
  "mypy>=1.0",
  "build>=0.10",
  "twine>=4.0",
]

docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=1.3",
  "myst_nb",
  "sphinx-autodoc-typehints>=1.24.0",
  "matplotlib>=3.7",
  "scipy>=1.11",
  "jupyter",
  "jaxtyping>=0.2",
  "beartype>=0.15",
]

[project.urls]
Homepage = "https://github.com/nehalsinghmangat/dynamicalnodes"
Documentation = "https://nehalsinghmangat.github.io/dynamicalnodes"
Issues = "https://github.com/nehalsinghmangat/dynamicalnodes/issues"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
